--- a/views/rewardForm.pug
+++ b/views/rewardForm.pug
@@ -6,7 +6,7 @@ block append link
 block append scripts
 	script(src="https://code.jquery.com/jquery-3.6.0.min.js")
 	script(src='https://code.jquery.com/ui/1.13.1/jquery-ui.js')
-	script(type='text/javascript').
+	script(nonce=nonce, type='text/javascript').
 		$(document).ready(function () {
 			$('#date').datepicker({
 				dateFormat: 'yy-mm-dd',
@@ -18,7 +18,7 @@ block append scripts
 	script(src='/javascripts/rewardScripts.js')
 
 block content
-	script.
+	script(nonce=nonce).
 		document.getElementById('nav-rewform').classList.add('active');
 
 	// invisible Divs, ready for cloning
