--- a/views/rewardUpdate.pug
+++ b/views/rewardUpdate.pug
@@ -6,7 +6,7 @@ block append link
 block append scripts
 	script(src="https://code.jquery.com/jquery-3.6.0.min.js")
 	script(src='https://code.jquery.com/ui/1.13.1/jquery-ui.js')
-	script(type='text/javascript').
+	script(nonce=nonce, type='text/javascript').
 		$(document).ready(function () {
 			$('#date').datepicker({
 				dateFormat: 'yy/mm/dd',
