--- a/views/statsBooster.pug
+++ b/views/statsBooster.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	script.
+	script(nonce=nonce).
 		document.getElementById('nav-stats').classList.add('active');
 
 	div(class='container-lg')
