--- a/views/boosters.pug
+++ b/views/boosters.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	script.
+	script(nonce=nonce).
 		document.getElementById('nav-boosttyp').classList.add('active');
 
 	div(class='container-lg')
