--- a/views/layout.pug
+++ b/views/layout.pug
@@ -40,7 +40,7 @@ html(lang='en')
               a(class='nav-link', aria-current='page', href='/rewardForm/list', id='nav-rewlist') List rewards
             li(class='nav-item')
               a(class='nav-link', aria-current='page', href='/rewardForm/list2', id='nav-rewlist2')
-                svg(xmlns="http://www.w3.org/2000/svg" style='width: 32; height: auto;' viewBox="0 0 12000 12000" preserveAspectRatio="xMidYMid meet")
+                svg(xmlns="http://www.w3.org/2000/svg" width=32 height=auto viewBox="0 0 12000 12000" preserveAspectRatio="xMidYMid meet")
                   g(transform="translate(0.0,11000.0) scale(1, -1)" fill="#000000" stroke="none")
                     path(d="M3886 9784 c-89 -21 -174 -71 -246 -144 -103 -104 -150 -217 -150 -365 0 -148 47 -261 150 -365 74 -75 157 -122 251 -145 95 -22 1892 -22 1987 0 134 32 248 113 324 229 108 167 108 396 0 562 -76 116 -191 198 -324 229 -92 21 -1902 21 -1992 -1z")
                     path(d="M1230 9439 c-310 -41 -571 -166 -792 -378 -217 -208 -344 -436 -410 -734 l-23 -102 0 -3500 0 -3500 23 -102 c66 -298 194 -527 409 -733 196 -188 411 -302 686 -362 l102 -23 3675 0 3675 0 102 23 c298 66 527 194 733 409 188 196 302 411 362 686 l23 102 0 3500 0 3500 -23 102 c-61 276 -174 490 -362 686 -206 216 -438 345 -733 409 -92 20 -131 22 -407 23 l-305 0 -56 -26 c-79 -37 -133 -90 -171 -167 -29 -59 -33 -76 -33 -152 0 -76 4 -93 33 -152 38 -77 92 -130 171 -167 55 -26 60 -26 336 -32 215 -5 293 -10 338 -23 191 -54 354 -190 441 -368 83 -170 76 163 76 -3633 0 -3799 7 -3463 -77 -3635 -38 -79 -60 -109 -132 -181 -72 -72 -102 -94 -181 -132 -173 -84 185 -77 -3810 -77 -3995 0 -3637 -7 -3810 77 -79 38 -109 60 -181 132 -71 71 -94 102 -133 181 -83 169 -76 -159 -76 3635 0 3794 -7 3466 76 3635 84 171 256 314 440 366 46 13 122 18 339 23 l281 6 66 33 c77 38 130 92 167 171 22 47 26 70 26 141 0 71 -4 94 -26 141 -37 79 -90 133 -167 171 l-66 33 -271 2 c-148 0 -299 -3 -335 -8z")
@@ -57,18 +57,18 @@ html(lang='en')
             li(class='nav-item')
               if (connected === true)
                 a(class='nav-link', aria-current='page', href='/users/disconnect')
-                  svg(xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 512" style='width: 32; height: auto;')
+                  svg(xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 512" width=32 height=auto)
                     circle(fill="#EF4136" transform="rotate(45 -181.019 437.02) scale(3.28877)" r="77.84")
                     path(fill="#fff" d="m162.03 311.94-28.73 28.73 39.61 39.62 29.11-29.12c30.83 25.41 60.09 27.74 87.12 18.45L143.65 224.13c-9.12 26.74-6.66 55.93 18.38 87.81zm-31.46-150.11c-6.42-6.42-6.42-16.83 0-23.25 6.42-6.42 16.83-6.42 23.25 0l27.22 27.22c9.99-11.21 20.7-21.87 30.85-32.03l21.7 21.69 49.46-49.45c8.33-8.34 21.98-8.34 30.32 0 8.33 8.33 8.33 21.98 0 30.31l-49.47 49.47 63.1 63.09 49.46-49.46c8.34-8.34 21.98-8.34 30.32 0s8.33 21.98 0 30.31l-49.47 49.46 22.5 22.5c-10 10-20.74 20.7-32.14 30.74L375 359.76c6.42 6.41 6.42 16.83 0 23.25-6.42 6.41-16.84 6.41-23.25 0L130.57 161.83z")
               else
                 a(class='nav-link', aria-current='page', href='/users/loginForm', id='nav-login')
-                  svg(xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 512" style='width: 32; height: auto;')
+                  svg(xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 512" width=32 height=auto)
                     circle(fill="#01A437" transform="rotate(45 -181.019 437.02) scale(3.28877)" r="77.84")
                     path(fill="#fff" d="m162.27 317.75-30.92 30.65 39.62 39.61 31.29-31.03c69.87 57.6 131.69-3.38 177.78-49.48L357.55 285l49.47-49.45c8.33-8.33 8.33-21.98 0-30.32-8.34-8.34-21.99-8.33-30.32 0l-49.46 49.46-63.1-63.09 49.46-49.47c8.34-8.33 8.34-21.98 0-30.31-8.34-8.34-21.98-8.34-30.32 0l-49.46 49.46-21.69-21.7c-47.36 47.36-106.64 105.87-49.86 178.17z")
       section(id='pageContent')
         block content
-      footer(class='page-footer fixed-bottom', style='background-color: #e9e9f9;')
-        div(class='container-fluid', style='width: 100%;height:25px;')
+      footer(class='page-footer fixed-bottom', background-color='#e9e9f9')
+        div(class='container-fluid', width='100%' height='25px')
           p(class='text-end')
             i croopyrite jojo
 
