--- a/views/rewardList.pug
+++ b/views/rewardList.pug
@@ -7,7 +7,7 @@ block append link
 block append scripts
 
 block content
-	script.
+	script(nonce=nonce).
 		document.getElementById('nav-rewlist').classList.add('active');
 
 	div(class='container-fluid')
@@ -42,7 +42,7 @@ block content
 		//script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous")
 		script(src="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.js")
 		script(src="https://unpkg.com/bootstrap-table@1.20.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js")
-		script(type='text/javascript').
+		script(nonce=nonce, type='text/javascript').
 			let $table = $('#table');
 
 			function rowStyle(row, index) {
